--- a/index.html
+++ b/index.html
@@ -9,4 +9,159 @@
     <script src='main.js'></script>
     <!---fontawesome link-->
     <script src="https://use.fontawesome.com/6f2f6a47b7.js"></script>
+    <!---boothstrap link--->
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+<body>
+    <!-----its now about writing clean codes (headerSection)-->
+    <section id="header">
+        <nav class="navbar navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><h3><small>Mfm ItaOluwa Youth Church</small></h3></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT US</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">SERVICES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">WORSHIP W/US</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">TESTIMONIES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">CONTACT US</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </section>
+    <!-- welcome text section -->
+    <section id="welcome">
+        <div class="container">
+            <!---boothstrap class-->
+            <div class="welcome text-center">
+                <h1>Welcome to MFM ItaOluwa, Youth Church</h1>
+                <p>Citadel of Victory</p>
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and <br> publishing industries for previewing layouts and visual mockups.</p>
+                <button type="submit" class="btn home-btn">News Letter</button>
+            </div>
+        </div>
+    </section>
+    <!---About the church section-->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-6 text-justify">
+                    <h3>Prayer, Meditation & Hard Work </h3>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="col-md-6 text-justify">
+                    <h3>Faith in nothing but, our lord Jesus Christ.</h3>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="embed-responsive  embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5pFe2stKzR8?start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services section-->
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                  <img src="images/bible.png" width="128px" height="128px">  
+                  <h4>In truth and Spirit</h4>
+                  <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="images/church.png">  
+                    <h4>In truth and Spirit</h4>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                  </div>
+                  <div class="col-md-4">
+                    <img src="images/dance.png ">  
+                    <h4>In truth and Spirit</h4>
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                  </div>
+            </div>
+        </div>
+    </section>
+    <!-- features section-->
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="images/pexels-tara-winstead-8383459.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <div class="featurebox">
+                        <div class="featureLeft">
+                            <i class="fa fa-cubes"></i>
+                        </div>
+                        <div class="featureRight">
+                          <h4>Certified trainers </h4> 
+                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                    <div class="featurebox">
+                        <div class="featureLeft">
+                            <i class="fa fa-chain-broken"></i>
+                        </div>
+                        <div class="featureRight">
+                          <h4>Certified trainers </h4> 
+                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                    <div class="featurebox">
+                        <div class="featureLeft">
+                            <i class="fa fa-heart"></i>
+                        </div>
+                        <div class="featureRight">
+                          <h4>Free consultations </h4> 
+                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonials section -->
+    
+    <section id="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                        <br>
+                        <i class="fa fa-twitter"></i> <span>@username.</span>
+                        <img src="images/user1.jpg" class="img-fluid">
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+</body>
+</html>
