--- a/index.html
+++ b/index.html
@@ -151,7 +151,23 @@
     
     <section id="testimonials">
         <div class="container">
+            <h1 class="text-center"> Meet Our Members.</h1>
+            <p class="text-center" >Lorem ipsum is placeholder text commonly used in the graphic, print,  <br> and publishing industries for previewing layouts and visual mockups.</p>
             <div class="row">
+                <div class="col-md-4">
+                    <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                        <br>
+                        <i class="fa fa-twitter"></i> <span>@username.</span>
+                        <img src="images/user1.jpg" class="img-fluid">
+                    </p>
+                </div>
+                <div class="col-md-4 middle">
+                    <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                        <br>
+                        <i class="fa fa-twitter"></i> <span>@username.</span>
+                        <img src="images/user1.jpg" class="img-fluid">
+                    </p>
+                </div>
                 <div class="col-md-4">
                     <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
                         <br>
@@ -162,6 +178,21 @@
             </div>
         </div>
     </section>
-    
+    <!--  section -->
+    <section id="subscribe">
+        <div class="container">
+            <div class="subscribe text-center">
+                <h3> Join us today</h3>
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                <div class="input-group">
+                    <input type="email" class="form-control" placeholder="email id">
+                    <div class="input-group-append">
+                        <button type="submit" class="input-group-text btn"> Subscribe </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
