--- a/index.html
+++ b/index.html
@@ -194,5 +194,29 @@
             </div>
         </div>
     </section>
+     <!--  section -->
+     <section id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="images/kindpng_2373746.png" class="footerLogo">
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/kindpng_2373746.png" class="footerLogo">
+                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="col-md-3">
+                    <h1>Features</h1>
+                    <p>Good pastors</p>
+                    <p>Free consultations</p>
+                    <p>Flexible time</p>
+                    <p>Rare testimonies</p>
+
+                </div>
+
+            </div>
+        </div>
+     </section>
 </body>
 </html>
