--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/smooth-scroll.js"></script>
+<script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+</script>
 </head>
 <body>
     <!-----its now about writing clean codes (headerSection)-->
@@ -27,22 +31,22 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link" aria-current="page" href="#top">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="#about">ABOUT US</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">SERVICES</a>
+                    <a class="nav-link" href="#services">SERVICES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">WORSHIP W/US</a>
+                    <a class="nav-link"  href="#features">WORSHIP W/US</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">TESTIMONIES</a>
+                    <a class="nav-link"  href="#testimonials">TESTIMONIES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">CONTACT US</a>
+                    <a class="nav-link"  href="#footer">CONTACT US</a>
                   </li>
                 </ul>
               </div>
@@ -203,19 +207,32 @@
                     <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/kindpng_2373746.png" class="footerLogo">
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
-                </div>
-                <div class="col-md-3">
                     <h1>Features</h1>
                     <p>Good pastors</p>
                     <p>Free consultations</p>
                     <p>Flexible time</p>
                     <p>Rare testimonies</p>
-
                 </div>
+                <div class="col-md-3">
+                    <h1>Quick Contact</h1>
+                    <p><i class="fa fa-phone"></i>  +123456789</p>
+                    <p><i class="fa fa-envelope"></i>mfmItaOluwaYouthChurch@gmail.com</p>
+                    <p><i class="fa fa-home"></i> church address</p>
+                    <p class="city">Good pastors</p>
+                </div>
+                <div class="col-md-3">
+                    <h1>Follow us on Social media</h1>
+                    <p><i class="fa fa-facebook"></i> Facebook</p>
+                    <p><i class="fa fa-youtube"></i> Youtube</p>
+                    <p><i class="fa fa-whatsapp"></i> Whatsapp</p>
+                    <p><i class="fa fa-telegram"></i> Telegram</p>
+                </div>
+                
+
 
             </div>
+            <hr>
+            <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
         </div>
      </section>
 </body>
