--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 <script>
 	var scroll = new SmoothScroll('a[href*="#"]');
 </script>
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 <body>
     <!-----its now about writing clean codes (headerSection)-->
     <section id="header">
         <nav class="navbar navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><h3><small>Mfm ItaOluwa Youth Church</small></h3></a>
+              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
               </button>
@@ -54,7 +58,7 @@
           </nav>
     </section>
     <!-- welcome text section -->
-    <section id="welcome">
+    <section id="welcome" class="slide-Left">
         <div class="container">
             <!---boothstrap class-->
             <div class="welcome text-center">
@@ -70,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid">
+                    <img src="images/bannerTwo.jpg" class="img-fluid animate__animated animate__bounce animate__delay-5s">
                 </div>
                 <div class="col-md-6 text-justify">
                     <h3>Prayer, Meditation & Hard Work </h3>
@@ -84,7 +88,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive  embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5pFe2stKzR8?start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div style='position:relative; padding-bottom:calc(56.00% + 44px)'><iframe src='https://gfycat.com/ifr/AcceptableAmazingFreshwatereel' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
                     </div>
                 </div>
             </div>
