--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 <h1>Welcome to MFM ItaOluwa, Youth Church</h1>
                 <p>Citadel of Victory</p>
                 <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and <br> publishing industries for previewing layouts and visual mockups.</p>
-                <button type="submit" class="btn home-btn">News Letter</button>
+                <a href="register.html"><button type="submit" class="btn home-btn">News Letter</button></a>
             </div>
         </div>
     </section>
@@ -162,7 +162,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <h1 class="text-center"> Meet Our Members.</h1>
             <p class="text-center" >Lorem ipsum is placeholder text commonly used in the graphic, print,  <br> and publishing industries for previewing layouts and visual mockups.</p>
             <div class="row">
-                <div class="col-md-4">
+                    <div class="col-md-4 middle">
                     <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
                         <br>
                         <i class="fa fa-twitter"></i> <span>@username.</span>
@@ -176,7 +176,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                         <img src="images/user1.jpg" class="img-fluid">
                     </p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 middle">
                     <p class="review">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
                         <br>
                         <i class="fa fa-twitter"></i> <span>@username.</span>
