--- a/index.html
+++ b/index.html
@@ -119,37 +119,45 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <!-- features section-->
     <section id="features">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="images/pexels-tara-winstead-8383459.jpg" class="img-fluid">
+            <div class="row ">
+                <div class="col-md-6 " style="background-color: transparent  ; border-radius: 13px;">
+                    <table class="table table-light table-hover">
+                        <thead>
+                            <tr>
+                              <th scope="col">Every <br> Sunday</th>
+                              <th scope="col">Worship services</th>
+                              <th scope="col">Time:</th>
+                              <th scope="col">8:00a.m</th>
+                              <th scope="col"><button type="button" class="btn btn-secondary">add to calender</button> </th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th scope="row"> <b> Every <br> Sunday</b></th>
+                              <td><b>Worship services</b></td>
+                              <td><b>Time:</b></td>
+                              <td> <b>8:00a.m</b> </td>
+                              <td><button type="button" class="btn btn-secondary">add to calender</button></td>
+                            </tr>
+                            <tr>
+                                <th scope="row"> <b> Every <br> Sunday</b></th>
+                                <td><b>Worship services</b></td>
+                                <td><b>Time:</b></td>
+                                <td> <b>8:00a.m</b> </td>
+                                <td><button type="button" class="btn btn-secondary">add to calender</button></td>
+                              </tr>
+                              <tr>
+                                <th scope="row"> <b> Every <br> Sunday</b></th>
+                                <td><b>Worship services</b></td>
+                                <td><b>Time:</b></td>
+                                <td> <b>8:00a.m</b> </td>
+                                <td><button type="button" class="btn btn-secondary">add to calender</button></td>
+                              </tr>
+                          </tbody>
+                        </table>
                 </div>
                 <div class="col-md-6">
-                    <div class="featurebox">
-                        <div class="featureLeft">
-                            <i class="fa fa-cubes"></i>
-                        </div>
-                        <div class="featureRight">
-                          <h4>Certified trainers </h4> 
-                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                        </div>
-                    </div>
-                    <div class="featurebox">
-                        <div class="featureLeft">
-                            <i class="fa fa-chain-broken"></i>
-                        </div>
-                        <div class="featureRight">
-                          <h4>Certified trainers </h4> 
-                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                        </div>
-                    </div>
-                    <div class="featurebox">
-                        <div class="featureLeft">
-                            <i class="fa fa-heart"></i>
-                        </div>
-                        <div class="featureRight">
-                          <h4>Free consultations </h4> 
-                          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                        </div>
+                  <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid ">
                     </div>
                 </div>
             </div>
@@ -238,6 +246,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <hr>
             <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
         </div>
+     </section>
+     <section>
+        
      </section>
 </body>
 </html>
