--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </head>
 <body>
     <!-----its now about writing clean codes (headerSection)-->
-    <section id="header">
+    <section id="header" style="background-image: url('images/bannerTwo.jpg')">
         <nav class="navbar navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
