--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <section id="header" style="background-image: url('images/bannerTwo.jpg')">
         <nav class="navbar navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
+              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3 style="color:#000 ;">Mfm ItaOluwa Youth Church</h3></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
               </button>
@@ -62,8 +62,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="container">
             <!---boothstrap class-->
             <div class="welcome text-center">
-                <h1>Welcome to MFM ItaOluwa, Youth Church</h1>
-                <p>Citadel of Victory</p>
+                <h1>Read A Sermon</h1>
+                <p>Are you in need of answers?, perhaps you just need something to feed your spirit man at your own pace <br> heres a list of sermons from our sunday services and weekly programs to help you grow spiritually.  </p>
                 <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and <br> publishing industries for previewing layouts and visual mockups.</p>
                 <a href="register.html"><button type="submit" class="btn home-btn">News Letter</button></a>
             </div>
