--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <section id="features">
         <div class="container">
             <div class="row ">
+                <div class="col-md-6">
+                  <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid ">
+                    </div>
+                
                 <div class="col-md-6 " style="background-color: transparent  ; border-radius: 13px;">
                     <table class="table table-light table-hover">
                         <thead>
@@ -155,10 +159,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                               </tr>
                           </tbody>
                         </table>
-                </div>
-                <div class="col-md-6">
-                  <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid ">
-                    </div>
                 </div>
             </div>
         </div>
@@ -200,13 +200,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <div class="subscribe text-center">
                 <h3> Join us today</h3>
                 <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                <div class="input-group">
-                    <input type="email" class="form-control" placeholder="email id">
-                    <div class="input-group-append">
-                        <button type="submit" class="input-group-text btn"> Subscribe </button>
-                    </div>
-                </div>
-
+                <a href="blog.html"><button type="button" class="btn btn-primary">Read Sermons</button></a>
             </div>
         </div>
     </section>
