--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -91,7 +91,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                       <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
                       <h2 class="section-heading">Reaching for the Stars</h2>
                       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-                      <a href="#!"><img class="img-fluid" src="assets/img/post-sample-image.jpg" alt="..." /></a>
+                      <a href="#!"><img class="img-fluid" src="images/bannerThree.jpg" alt="..." /></a>
                       <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
                       <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
                       <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
@@ -206,40 +206,40 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
       </div>
    </section>
-   <!--footer  section -->
-   <section id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <img src="images/kindpng_2373746.png" class="footerLogo">
-                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
-            </div>
-            <div class="col-md-3">
-                <h1>Features</h1>
-                <p>Good pastors</p>
-                <p>Free consultations</p>
-                <p>Flexible time</p>
-                <p>Rare testimonies</p>
-            </div>
-            <div class="col-md-3">
-                <h1>Quick Contact</h1>
-                <p><i class="fa fa-phone"></i>  +123456789</p>
-                <p><i class="fa fa-envelope"></i>mfmItaOluwaYouthChurch@gmail.com</p>
-                <p><i class="fa fa-home"></i> church address</p>
-                <p class="city">Good pastors</p>
-            </div>
-            <div class="col-md-3">
-                <h1>Follow us on Social media</h1>
-                <p><i class="fa fa-facebook"></i> Facebook</p>
-                <p><i class="fa fa-youtube"></i> Youtube</p>
-                <p><i class="fa fa-whatsapp"></i> Whatsapp</p>
-                <p><i class="fa fa-telegram"></i> Telegram</p>
-            </div>
-            
-
-
-        </div>
-        <hr>
-        <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
-    </div>
- </section>
+ <!-- footer section -->
+ <section id="footer">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3">
+              <img src="images/kindpng_2373746.png" class="footerLogo">
+              <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
+          </div>
+          <div class="col-md-3">
+              <h1>Quick Links</h1>
+              <a href="blog.html"><p><i class="fa fa-bookmark"></i>Blog Posts</p></a>
+              <a href="register.html"><p><i class="fa fa-newspaper-o"></i>Subscribe to Newsletters</p></a>
+              <a href="support.html"><p><i class="fa fa-credit-card-alt"></i>Support & Donations</p></a>
+              <a href="locate.html"><p><i class="fa fa-map-marker"></i>Locate us on Google map</p></a>
+          </div>
+          <div class="col-md-3">
+              <h1>Quick Contact</h1>
+              <p><i class="fa fa-phone"></i>  +123456789</p>
+              <p><i class="fa fa-envelope"></i>mfmItaOluwaYouthChurch@gmail.com</p>
+              <a href="locate.html"><p><i class="fa fa-home"></i> church address</p></a>
+             
+          </div>
+          <div class="col-md-3">
+              <h1>Follow us on Social media</h1>
+              <p><i class="fa fa-facebook"></i> Facebook</p>
+              <p><i class="fa fa-youtube"></i> Youtube</p>
+              <p><i class="fa fa-whatsapp"></i> Whatsapp</p>
+              <p><i class="fa fa-telegram"></i> Telegram</p>
+          </div>
+      </div>
+      <hr>
+      <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
+  </div>
+</section>
+<!-- end of section -->
+</body>
+</html>
