--- a/locate.html
+++ b/locate.html
@@ -99,7 +99,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
             </div>
             <div class="col-md-6 embed-responsive embed-responsive-16by9" >
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.681724354691!2d3.503127214771589!3d6.686290095165753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103be97c7fa26adb%3A0xaa0d73cab9450299!2sCitadel%20of%20joy%20event%20Center!5e0!3m2!1sen!2sng!4v1659114735518!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+                <iframe class="embed-responsive-16by9" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.681724354691!2d3.503127214771589!3d6.686290095165753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103be97c7fa26adb%3A0xaa0d73cab9450299!2sCitadel%20of%20joy%20event%20Center!5e0!3m2!1sen!2sng!4v1659114735518!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
             </div>
           </div>
           </section>
