--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <a class="nav-link" href="#services">SERVICES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  href="#features">WORSHIP W/US</a>
+                    <a class="nav-link"  href="locate.html">WORSHIP W/US</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link"  href="#testimonials">TESTIMONIES</a>
@@ -57,22 +57,21 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
           </nav>
           <!-- end of navbar-->
+          <section id="welcome" class="slide-Left">
+            <div class="container">
+                <!---boothstrap class-->
+                <div class="welcome text-center" style="margin-top: 0;">
+                    <h1 style="color: #fff;">Welcome to MFM ItaOluwa, Youth Church.</h1>
+                    <p style="color: #fff;">Citadel of Victory</p>      
+                </div>
+            </div>
+        </section>
     </section>
     <!-- welcome text section -->
-    <section id="welcome" class="slide-Left">
-        <div class="container">
-            <!---boothstrap class-->
-            <div class="welcome text-center">
-                <h1>Welcome to MFM ItaOluwa, Youth Church.</h1>
-                <p>Citadel of Victory</p>
-                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and <br> publishing industries for previewing layouts and visual mockups.</p>
-                <a href="register.html"><button type="submit" class="btn home-btn">News Letter</button></a>
-            </div>
-        </div>
-    </section>
+   
     <!-- end of welcome text section-->
     <!---About the church section-->
-    <section id="about">
+    <section id="about"style="margin-top: 0;>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center">
