--- a/locate.html
+++ b/locate.html
@@ -26,7 +26,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
 </head>
 <body>
-    <!-----its now about writing clean codes (headerSection)-->
+    <!-----its about writing clean codes (headerSection)-->
     <section id="headerOne">
         <nav class="navbar navbar-light">
             <div class="container-fluid">
@@ -46,10 +46,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <a class="nav-link" href="blog.html">BLOGS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  href="#features">WORSHIP W/US</a>
+                    <a class="nav-link"  href="locate.html">WORSHIP W/US</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  href="#testimonials">TESTIMONIES</a>
+                    <a class="nav-link"  href="index.html">TESTIMONIES</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link"  href="#footer">CONTACT US</a>
@@ -99,10 +99,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
             </div>
             <div class="col-md-6 embed-responsive embed-responsive-16by9" >
-                <iframe class="embed-responsive-16by9" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.681724354691!2d3.503127214771589!3d6.686290095165753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103be97c7fa26adb%3A0xaa0d73cab9450299!2sCitadel%20of%20joy%20event%20Center!5e0!3m2!1sen!2sng!4v1659114735518!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.681724354691!2d3.503127214771589!3d6.686290095165753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103be97c7fa26adb%3A0xaa0d73cab9450299!2sCitadel%20of%20joy%20event%20Center!5e0!3m2!1sen!2sng!4v1659209837137!5m2!1sen!2sng" width="480" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
-          </section>
+    </section>
           <section id="subscribe">
             <div class="container">
                 <div class="subscribe text-center">
@@ -148,7 +148,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
      </section>
      <!-- end of section -->
-
-          </body>
-          </html>
+</body>
+</html>
             
