--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           <section id="welcome" class="slide-Left">
             <div class="container">
                 <!---boothstrap class-->
-                <div class="welcome text-center" style="margin-top: 0;">
+                <div class="site-heading text-center" style="margin-top: 60px;">
                     <h1 style="color: #fff;">Welcome to MFM ItaOluwa, Youth Church.</h1>
                     <p style="color: #fff;">Citadel of Victory</p>      
                 </div>
             </div>
         </section>
     </section>
-    <!-- welcome text section -->
-   
-    <!-- end of welcome text section-->
     <!---About the church section-->
     <section id="about"style="margin-top: 0;>
         <div class="container">
@@ -100,21 +97,36 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                  <img src="images/bible.png" width="128px" height="128px" class="img-fluid">  
-                  <h4>Devotion to the word of God.</h4>
-                  <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+              <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="images/blogBannerTwo.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <a href="#" class="btn btn-primary"> Go </a>
+                  </div>
                 </div>
-                <div class="col-md-4">
-                    <img src="images/church.png " class="img-fluid">  
-                    <h4>A family in Christ.</h4>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+              </div>
+              <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="images/bannerThree.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <a href="#" class="btn btn-primary"> Go </a>
                   </div>
-                  <div class="col-md-4">
-                    <img src="images/dance.png " class="img-fluid">  
-                    <h4>Encounter through worship.</h4>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="images/gabriel-brito-Stw8cGBXsPA-unsplash.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <a href="#" class="btn btn-primary"> Go </a>
                   </div>
+                </div>
+              </div>
             </div>
         </div>
     </section>
