--- a/blog.html
+++ b/blog.html
@@ -56,20 +56,17 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               </div>
             </div>
           </nav>
-    </section>
-    <!-- welcome text section -->
-    <section id="welcome" class="slide-Left">
-        <div class="container">
-            <!---boothstrap class-->
-            <div class="welcome text-center">
-                <h1>Read A Sermon</h1>
-                <p>Are you in need of answers?, perhaps you just need something to feed your spirit man at your own pace <br> heres a list of sermons from our sunday services and weekly programs to help you grow spiritually.  </p>
-                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and <br> publishing industries for previewing layouts and visual mockups.</p>
-                <a href="register.html"><button type="submit" class="btn home-btn">News Letter</button></a>
+          <section id="welcome" class="slide-Left">
+            <div class="container">
+                <!---boothstrap class-->
+                <div class="site-heading text-center" style="margin-top: 60px;">
+                    <h1 style="color: #000;">Read A Sermon</h1>
+                    <p style="color: #000; font-weight: 700;">Are you in need of answers?, perhaps you just need something to feed your spirit man at your own pace <br> heres a list of sermons from our sunday services and weekly programs to help you grow spiritually.</p>
+                </div>
             </div>
-        </div>
+        </section>
     </section>
-    <!---blog post section-->
+  
     <section id="postPreview">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
