--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <body>
     <!-----its now about writing clean codes (headerSection)-->
     <section id="header">
-        <nav class="navbar navbar-light">
+        <nav class="navbar navbar-light" id="navbarResponsive">
             <div class="container-fluid">
               <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,7 +96,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <!-- Services section-->
     <section id="services">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
                   <img src="images/blogBannerTwo.jpg" class="card-img-top" alt="...">
@@ -138,7 +138,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <img src="images/pexels-luis-quintero-2774546.jpg" class="img-fluid ">
                     </div>
                 
-                <div class="col-md-6 " style="background-color: transparent  ; border-radius: 13px;">
+                <div class="col-md-6 justify-content-center" style="background-color: transparent  ; border-radius: 13px;">
                     <table class="table table-light table-hover">
                         <thead>
                             <tr>
@@ -146,8 +146,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                               <th scope="col">Worship services</th>
                               <th scope="col">Time:</th>
                               <th scope="col">8:00a.m</th>
-                              <th scope="col"><a href=""><button type="button" class="btn btn-secondary">add to calender</button></a> </th>
-                            </tr>
                           </thead>
                           <tbody>
                             <tr>
@@ -155,28 +153,24 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                               <td><b>Bible Studies</b></td>
                               <td><b>Time:</b></td>
                               <td> <b>5:00p.m</b> </td>
-                              <td><a href=""><button type="button" class="btn btn-secondary">add to calender</button></a></td>
                             </tr>
                             <tr>
                                 <th scope="row"> <b> Wednesdays</b></th>
                                 <td><b>Manner Water service</b></td>
                                 <td><b>Time:</b></td>
                                 <td><b>4:30p.m</b> </td>
-                                <td><a href=""><button type="button" class="btn btn-danger">Stream Live</button></a></td>
                               </tr>
                               <tr>
                                 <th scope="row"> <b>First Saturdays <br> <em>Every Month</em></b></th>
                                 <td><b>PMCH service</b></td>
                                 <td><b>Time:</b></td>
                                 <td><b>7:00a.m</b> </td>
-                                <td><a href=""><button type="button" class="btn btn-danger">Stream Live</button></a></td>
                               </tr>
                               <tr>
                                 <th scope="row"> <b> Thursdays</b></th>
                                 <td><b>Fire of Revival Service</b></td>
                                 <td><b>Time:</b></td>
                                 <td><b>5:00p.m</b> </td>
-                                <td><a href=""><button type="button" class="btn btn-secondary">add to calender</button></a></td>
                               </tr>
                           </tbody>
                         </table>
