--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <img src="images/bannerTwo.jpg" class="img-fluid animate__animated animate__bounce animate__delay-7s">
                 </div>
                 <div class="col-md-6 text-justify">
-                    <h3>Prayer, Meditation & Hard Work </h3>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <h3>MFM is a do-it-yourself gospel ministry that takes the fight into your hands  and trains your fingers to fight. </h3>
+                    <p>Resurrection of Apostolic Signs, Fireworks of the Holy Spirit, Miracles, and Unlimited Demonstrations of God's Maximum Reaching Power. Absolute holiness inside and outside as a spiritual pesticide and a need for heaven is openly taught. MFM is a do-it-yourself gospel ministry that takes the fight into your hands and trains your fingers to fight. Psalm 144:1.</p>
+                   
                 </div>
                 <div class="col-md-6 text-justify">
                     <h3>Faith in nothing but, our lord Jesus Christ.</h3>
